# Frapper

./: CMakeLists.txt  LICENSE.TXT  README.md  putty_svn.code.sf.net.reg  start_commit_hook.py
applications/: CMakeLists.txt
applications/frapperdemo/: Application.cpp  Application.h  CMakeLists.txt  frapper.rc  main.cpp
applications/frapperdemo/styles/: default.css
applications/frapperogreconfig/: CMakeLists.txt  FrapperOgreConfig.cpp  FrapperOgreConfig.h  FrapperOgreConfig.rc  Resource.h
applications/stereobottic/: CMakeLists.txt  StereoBottic.cpp  StereoBottic.h  StereoBottic.qrc  StereoBottic.rc  main.cpp
plugins/: CMakeLists.txt  nodetype.dtd
plugins/nodes/: CMakeLists.txt
plugins/nodes/Animation/: CMakeLists.txt
plugins/nodes/Animation/AnimationClip/: AnimationClipNode.cpp  AnimationClipNode.h  AnimationClipNodePlugin.cpp  AnimationClipNodePlugin.h  CMakeLists.txt  animationclip.xml
plugins/nodes/Animation/FadeAnimation/: CMakeLists.txt  FadeAnim.xml  FadeAnimNode.cpp  FadeAnimNode.h  FadeAnimNodePlugin.cpp  FadeAnimNodePlugin.h
plugins/nodes/Animation/LoopAnimation/: CMakeLists.txt  LoopAnim.xml  LoopAnimNode.cpp  LoopAnimNode.h  LoopAnimNodePlugin.cpp  LoopAnimNodePlugin.h
plugins/nodes/Animation/RandomBlink/: CMakeLists.txt  RandomBlinkNode.cpp  RandomBlinkNode.h  RandomBlinkNodePlugin.cpp  RandomBlinkNodePlugin.h  randomblink.xml
plugins/nodes/Animation/TriggerAnimation/: CMakeLists.txt  TriggerAnim.xml  TriggerAnimNode.cpp  TriggerAnimNode.h  TriggerAnimNodePlugin.cpp  TriggerAnimNodePlugin.h
plugins/nodes/Cameras/: CMakeLists.txt
plugins/nodes/Cameras/Camera/: CMakeLists.txt  CameraNode.cpp  CameraNode.h  CameraNodePlugin.cpp  CameraNodePlugin.h  camera.xml
plugins/nodes/Cameras/FiveViewCamera/: CMakeLists.txt  FiveViewCamera.cpp  FiveViewCamera.h  FiveViewCameraPlugin.cpp  FiveViewCameraPlugin.h  fiveviewcamera.xml
plugins/nodes/Cameras/StereoCamera/: CMakeLists.txt  StereoCamera.cpp  StereoCamera.h  StereoCameraNode.h  StereoCameraPlugin.cpp  StereoCameraPlugin.h  stereocamera.xml
plugins/nodes/Compositing/: CMakeLists.txt
plugins/nodes/Compositing/ColorCorrection/: CMakeLists.txt  ColorCorrectionNode.cpp  ColorCorrectionNode.h  ColorCorrectionNodePlugin.cpp  ColorCorrectionNodePlugin.h  colorcorrection.xml
plugins/nodes/Compositing/CompositorTemplate/: CMakeLists.txt  CompositorTemplateNode.cpp  CompositorTemplateNode.h  CompositorTemplateNodePlugin.cpp  CompositorTemplateNodePlugin.h  bloom.xml  boxblur.xml  brightnessContrast.xml  cld.xml  colorkey.xml  depth2stereo.xml  depthoffield.xml  freichen.xml  gaussblur.xml  imageabstraction.xml  lensedistortion.xml  lns.xml  mask.xml  multiblend.xml  objectidfilter.xml  oilpainting.xml  pencildrawing.xml  skin.xml  sobel.xml  voronoi.xml
plugins/nodes/Compositing/MultiTexture/: CMakeLists.txt  MultiTextureNode.cpp  MultiTextureNode.h  MultiTextureNodePlugin.cpp  MultiTextureNodePlugin.h  multitexture.xml
plugins/nodes/Compositing/SimpleBlend/: CMakeLists.txt  SimpleBlendNode.cpp  SimpleBlendNode.h  SimpleBlendNodePlugin.cpp  SimpleBlendNodePlugin.h  simpleblend.xml
plugins/nodes/Compositing/Tile/: CMakeLists.txt  tile.xml
plugins/nodes/Compositing/Tridelity/: CMakeLists.txt  TridelityNode.cpp  TridelityNode.h  TridelityNodePlugin.cpp  TridelityNodePlugin.h  tridelity.xml
plugins/nodes/DataExchange/: CMakeLists.txt
plugins/nodes/DataExchange/Alembic/: AlembicExportNode.cpp  AlembicExportNode.h  AlembicExportNodePlugin.cpp  AlembicExportNodePlugin.h  CMakeLists.txt  alembicexport.xml
plugins/nodes/DataExchange/ImageSaver/: CMakeLists.txt  ImageSaverNode.cpp  ImageSaverNode.h  ImageSaverNodePlugin.cpp  ImageSaverNodePlugin.h  imagesaver.xml
plugins/nodes/DataExchange/ImageSaverCV/: CMakeLists.txt  ImageSaverCVNode.cpp  ImageSaverCVNode.h  ImageSaverCVNodePlugin.cpp  ImageSaverCVNodePlugin.h  imagesavercv.xml
plugins/nodes/DataExchange/ImageSaverOgre/: CMakeLists.txt  ImageSaverOgreNode.cpp  ImageSaverOgreNode.h  ImageSaverOgreNodePlugin.cpp  ImageSaverOgreNodePlugin.h  imagesaverogre.xml
plugins/nodes/Geometry/: CMakeLists.txt
plugins/nodes/Geometry/AnimatableMesh/: AnimatableMeshNode.cpp  AnimatableMeshNode.h  AnimatableMeshNodePlugin.cpp  AnimatableMeshNodePlugin.h  CMakeLists.txt  animatablemesh.xml
plugins/nodes/Geometry/AnimatableMeshDECT/: AnimatableMeshDECTNode.cpp  AnimatableMeshDECTNode.h  AnimatableMeshDECTNodePlugin.cpp  AnimatableMeshDECTNodePlugin.h  (+4 more)
plugins/nodes/ImageProcessing/: CMakeLists.txt
plugins/nodes/Images/: CMakeLists.txt
plugins/nodes/Input/: CMakeLists.txt
plugins/nodes/Lights/: CMakeLists.txt
plugins/nodes/Network/: CMakeLists.txt
plugins/nodes/Npr/: CMakeLists.txt
plugins/nodes/Rendering/: CMakeLists.txt
plugins/nodes/S3D/: CMakeLists.txt
plugins/nodes/Shading/: CMakeLists.txt
plugins/nodes/Timer/: CMakeLists.txt
plugins/nodes/Tracking/: CMakeLists.txt
plugins/nodes/Utility/: CMakeLists.txt
plugins/panels/: CMakeLists.txt
plugins/panels/PainterPanel/: CMakeLists.txt  PainterGraphicsItems.cpp  PainterGraphicsItems.h  PainterGraphicsScene.cpp  PainterGraphicsScene.h  PainterGraphicsView.cpp  PainterGraphicsView.h  PainterPanel.cpp  PainterPanel.h  PainterPanel.xml  PainterPanelExports.h  PainterPanelItemData.cpp  PainterPanelItemData.h  PainterPanelMainArea.ui  PainterPanelNode.cpp  PainterPanelNode.h  PainterPanelPlugin.cpp  PainterPanelPlugin.h  PainterPanelToolBar.ui  PainterUndoCommands.cpp  PainterUndoCommands.h
plugins/panels/PoemReaderPanel/: CMakeLists.txt  PoemReaderPanel.cpp  PoemReaderPanel.h  PoemReaderPanel.xml  PoemReaderPanelPlugin.cpp  PoemReaderPanelPlugin.h
plugins/panels/TestPanel/: CMakeLists.txt  TestPanel.cpp  TestPanel.h  TestPanel.xml  TestPanelPlugin.cpp  TestPanelPlugin.h
plugins/resources/opencvinput/: opencvColorInput.cpp  opencvColorInput.h  opencvRawInput.cpp  opencvRawInput.h
plugins/widgets/: CMakeLists.txt
plugins/widgets/universalGraph/: CMakeLists.txt  universalGraph.cpp  universalGraph.h  universalGraph.xml  universalGraphPlugin.cpp  universalGraphPlugin.h
(+934 files in other folders)
