project(Compositing)

if (FRAPPER_BUILD_NODES_COMPOSITING OR FRAPPER_BUILD_DEMO)
  message( STATUS "Adding plugins from directory Compositing")
  #add_subdirectory( Blend )
  add_subdirectory( ColorCorrection )
  add_subdirectory( CompositorTemplate )
  add_subdirectory ( MultiTexture )
  add_subdirectory( SimpleBlend )
  add_subdirectory( Tridelity )
  add_subdirectory( Tile )
else()  
  message( STATUS "Skipping plugins from directory Compositing")
endif()