project(Rendering)

if (FRAPPER_BUILD_NODES_RENDERING OR FRAPPER_BUILD_DEMO)
  message( STATUS "Adding plugins from directory Rendering")
  add_subdirectory( AdvancedRender )
  add_subdirectory( HairRender )
  add_subdirectory( HairRenderAlpha )
  add_subdirectory( HairSingleScatterRender )
  add_subdirectory( ShadowMapHairRender )
  add_subdirectory( ShadowMapRender )
  add_subdirectory( SimpleRender )
  add_subdirectory( TextRender )
else()  
  message( STATUS "Skipping plugins from directory Rendering")
endif()
