project(Shading)

if (FRAPPER_BUILD_NODES_SHADING OR FRAPPER_BUILD_DEMO)
  message( STATUS "Adding plugins from directory Shading")
  add_subdirectory( AmbientOcclusion )
#  add_subdirectory( Bloom )
#  add_subdirectory( BoxBlur )
#  add_subdirectory( CelShading )
#  add_subdirectory( ColorKey )
#  add_subdirectory( DepthOfField )
#  add_subdirectory( GaussBlur )
  add_subdirectory( GeometryBlur )
#  add_subdirectory( LenseDistortion )
  add_subdirectory( LightWarping )
  add_subdirectory( NormalFlatten )
#  add_subdirectory( ObjectIDFilter )
#  add_subdirectory( ShadingTemplate )
#  add_subdirectory( Skin )
  add_subdirectory( SurfaceCurvature )
#  add_subdirectory( WaterColor )
#  add_subdirectory( PointSimpleShader )
else()  
  message( STATUS "Skipping plugins from directory Shading")
endif()

