project(Utility)

if( FRAPPER_BUILD_NODES_PYTHON )
  add_subdirectory( Python )  
endif()

if (FRAPPER_BUILD_NODES_UTILITY OR FRAPPER_BUILD_DEMO)
  message( STATUS "Adding plugins from directory Utility")
  add_subdirectory( Adder )
  add_subdirectory( Float2Bool )
  add_subdirectory( Image2VertexBuffer )
  add_subdirectory( Index2Index )
  add_subdirectory( Merge )  
  add_subdirectory( Mean )  
  add_subdirectory( Multiplier )
  add_subdirectory( ParticleSystemLogic )
  add_subdirectory( PoemAnalyser )
  add_subdirectory( PoemReader )
  add_subdirectory( PointCloudTest )
  add_subdirectory( S3DGame )
  add_subdirectory( Split )
  add_subdirectory( String2Bool )
  add_subdirectory( StringMultiplexer )
  add_subdirectory( Test )
  add_subdirectory( Transform )
  add_subdirectory( Trigger )
  add_subdirectory( VectorMath )
  add_subdirectory( Files2PathVector )
else()  
  message( STATUS "Skipping plugins from directory Utility")
endif()


